Fix TMDB poster image reliability and add server perf tuning
- TmdbClient: set explicit connect/read timeouts via JdkClientHttpRequestFactory; bump image cache to 1y immutable
- application.properties: enable virtual threads and response compression
- MoviePage: rewrite poster loading to use an Image() preloader with retry-on-error instead of key-remount hack; bump load timeout to 15s